# vorpal-player-mvp

./: .env  Blueprint base wolrdforge y sistemas magicos.md  DIRECTIVAS_MAESTRAS.md  Guia completa.md  Mnesaje sobre n8n.txt  Principios de diseño.md  REGISTRO_TECNICO.md  Vorpal_Business_Plan.md  generar_plan.py  guia Vorpal para estructura.md  pyproject.toml  requirements.txt  setup.sh  test_environment.py
.devcontainer/: devcontainer.json
.github/workflows/: run_automation.yml
